[package]
name = "tg-react-bot"
version = "0.1.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3.1"
teloxide-macros = "0.3.2"
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
lexical = "5.2.0"
anyhow = "1.0.32"
