[package]
name = "tg-react-bot"
version = "0.1.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3"
teloxide-macros = "0.3"
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = { version = "1.8", features = ["full"] }
url = "2.2"
lexical = "5.2.0"
anyhow = "1.0"
futures = "0.3"
warp = "0.2"
serde_json = "1.0"
